Crash under WebPage::beginPrinting when m_printContext becomes null due to synchronous layout https://bugs.webkit.org/show_bug.cgi?id=202171 <rdar://problem/49731211>

Reviewed by Tim Horton.

Speculatively fix a null pointer dereference crash in WebPage::beginPrinting.

WebPage::beginPrinting creates a PrintContext, stores it in m_printContext, then calls
PrintContext::begin which forces a synchronous, paginated layout. If a post-layout task
executes script, that might result in the WebPage being closed and m_printContext being set
to nullptr.

Guard against this in WebPage::beginPrinting by adding a null check before calling
PrintContext::computePageRects.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::beginPrinting):


Canonical link: https://commits.webkit.org/215827@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250394 268f45cc-cd09-0410-ab3c-d52691b4dbfc